fixed bug where horizontal scroll bar appeared

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,10 @@
   color: white;
 }
 
+main {
+  overflow-x: hidden; 
+}
+
 body {
   --theme-color: #0f357acc;
   height: 100vh;
